<resources>
    <string name="app_name">Testing</string>
    <string name="gambarlawakkampus">gambarlawakkampus</string>
    <string name="collection_of_comics">Collection of Comics</string>
    <string name="lawak_kampus">Lawak Kampus</string>
    <string name="textview">Collection Of Comics</string>
    <string name="ujang">Ujang</string>
    <string name="uujang">Ujang</string>
    <string name="gambarujang">gambarujang</string>
    <string name="ujangg">Ujang</string>
    <string name="button">Under18</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="textvieww">TextView3</string>
    <string name="button3">jilid3</string>
    <string name="button2">jilid 2</string>
    <string name="button1">jilid 1</string>
    <string name="textview1">buttonLawakKampus</string>
    <string name="lawak_kampus1">Lawak Kampus</string>
    <string name="detailsLK"><![CDATA[Lawak Kampus merupakan karya daripada Keith & Zelo yang memaparkan kehidupan remaja sekolah dalam menjalani kehidupan. Selepas Zelo meninggalkan Kumpulan Art Square pada Disember 2003, Keith meneruskan karya Lawak Kampus secara berseorangan.Sehingga Oktober 2016, Lawak Kampus mempunyai 28 jilid novel grafik dalam bahasa Melayu dan kini banyak diolah dalam pelbagai bahasa, iaitu Cina dan Inggeris dan yang terbaru, bahasa Thai.]]></string>
    <string name="chapter_12">Chapter 12</string>
    <string name="chapter_9">Chapter 9</string>
    <string name="chapter_8">Chapter 8</string>
    <string name="chapter_7">Chapter 7</string>
    <string name="chapter_6">Chapter 6</string>
    <string name="chapter_5">Chapter 5</string>
    <string name="chapter_4">Chapter 4</string>
    <string name="chapter_3">Chapter 3</string>
    <string name="chapter_2">Chapter 2</string>
    <string name="chapter_11">Chapter 11</string>
    <string name="chapter_10">Chapter 10</string>
    <string name="chapter_1">Chapter 1</string>
    <string name="under_18">Under 18</string>
    <string name="detailsU18">Under 18 No Fear merupakan sebuah novel grafik karya Zint, seorang pelukis komik yang bekerja di bawah Kumpulan Art Square. Siri komik ini merupakan karya spin-off kepada judul Under 18 terdahulu(watak terdahulu ialah Ax,Kaio,dan Yosi) yang memaparkan kisah enam tahun kemudian di sekolah yang sama, namun ditonjolkan dengan watak-watak baru. Kelihatannya watak-watak Under 18 ada membuat kemunculan di sini dan membantu plot cerita, sekaligus mempunyai perkaitan di antara karakter-karakter yang wujud dalam siri ini.</string>
</resources>
