<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus_pc.testing.SecondPage">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="346dp"
        android:layout_height="42dp"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="15dp"
        android:text="@string/lawak_kampus1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintRight_toLeftOf="@+id/textView3"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="335dp"
        android:layout_height="176dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="45dp"
        android:text="@string/detailsLK"
        android:textColor="@android:color/black"
        app:layout_constraintRight_toLeftOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/chapter_1"
        android:textColor="@android:color/holo_red_dark"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="247dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/chapter_2"
        android:textColor="@android:color/holo_red_dark"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="302dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/chapter_3"
        android:textColor="@android:color/holo_red_dark"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="369dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/chapter_4"
        android:textColor="@android:color/holo_red_dark"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="429dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/chapter_5"
        android:textColor="@android:color/holo_red_dark"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="247dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/chapter_6"
        android:textColor="@android:color/holo_red_dark"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="302dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/chapter_7"
        android:textColor="@android:color/holo_red_dark"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="369dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/chapter_8"
        android:textColor="@android:color/holo_red_dark"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="429dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/chapter_9"
        android:textColor="@android:color/holo_red_dark"
        tools:layout_editor_absoluteX="275dp"
        tools:layout_editor_absoluteY="247dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/chapter_10"
        android:textColor="@android:color/holo_red_dark"
        tools:layout_editor_absoluteX="275dp"
        tools:layout_editor_absoluteY="302dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/chapter_11"
        android:textColor="@android:color/holo_red_dark"
        tools:layout_editor_absoluteX="275dp"
        tools:layout_editor_absoluteY="369dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/chapter_12"
        android:textColor="@android:color/holo_red_dark"
        tools:layout_editor_absoluteX="275dp"
        tools:layout_editor_absoluteY="429dp"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>
