<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus_pc.testing.ForthPage">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="150dp"
        android:layout_marginTop="0dp"
        android:text="@string/button1"
        app:layout_constraintRight_toLeftOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="RtlHardcoded"
        android:onClick="PDFViewer"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="150dp"
        android:layout_marginTop="150dp"
        android:text="@string/button2"
        app:layout_constraintRight_toLeftOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:layout_marginRight="150dp"
        android:text="@string/button3"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintRight_toLeftOf="@+id/button3"
        tools:ignore="RtlHardcoded" />
</android.support.constraint.ConstraintLayout>
